<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_repost"
        android:icon="?repost"
        android:title="@string/repost"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/menu_comment"
        android:icon="?comment"
        android:title="@string/comments"
        app:showAsAction="ifRoom"/>


        <item
        android:id="@+id/menu_refresh"
        android:icon="?refresh"
        app:showAsAction="ifRoom"
        android:title="@string/refresh"/>
        
    <item
        android:id="@+id/menu_fav"
        android:title="@string/favourite"
        app:showAsAction="ifRoom"
        android:icon="?fav_un"/>

    <item
        android:id="@+id/menu_unfav"
        android:title="@string/un_favourite"
        app:showAsAction="never"
        android:icon="?fav_en"/>

<!--     <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        android:visible="false"
        android:icon="?share"
        android:actionProviderClass="android.widget.ShareActionProvider"/> -->


    <item
        android:id="@+id/menu_copy"
        android:title="@string/copy_to_clipboard"
        app:showAsAction="never"
        android:icon="?share"/>

    <item
        android:id="@+id/menu_delete"
        android:visible="false"
        app:showAsAction="never"
        android:title="@string/delete"/>

</menu>