<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_drawer_menu"
        android:orientation="horizontal" >

        <Button
            style="@style/drawerMenuButton"
            android:background="@null"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_menu_home"
            android:text="@string/home" />

        <TextView
            android:id="@+id/tv_home_count"
            style="@style/drawerMessageCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="0"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_mention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_drawer_menu"
        android:orientation="horizontal" >

        <Button
            style="@style/drawerMenuButton"
            android:background="@null"
            android:clickable="false"
            android:drawableLeft="@drawable/repost_dark"
            android:text="@string/mentions" />

        <TextView
            android:id="@+id/tv_mention_count"
            style="@style/drawerMessageCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:freezesText="false"
            android:text="0"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:addStatesFromChildren="true"
        android:background="@drawable/btn_drawer_menu"
        android:clickable="true"
        android:orientation="horizontal" >

        <Button
            style="@style/drawerMenuButton"
            android:background="@null"
            android:clickable="false"
            android:drawableLeft="@drawable/comment_dark"
            android:text="@string/comments" />

        <TextView
            android:id="@+id/tv_comment_count"
            style="@style/drawerMessageCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:freezesText="false"
            android:text="0"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_dm"
        style="@style/drawerMenuButton"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:drawableLeft="@drawable/ic_menu_message"
        android:text="@string/dm" />

    <Button
        android:id="@+id/btn_favourite"
        style="@style/drawerMenuButton"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:drawableLeft="@drawable/ic_menu_fav"
        android:text="@string/favourite" />

    <Button
        android:id="@+id/btn_search"
        style="@style/drawerMenuButton"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:drawableLeft="@drawable/ic_menu_search"
        android:text="@string/search" />

    <Button
        android:id="@+id/btn_location"
        style="@style/drawerMenuButton"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:drawableLeft="@drawable/ic_menu_location"
        android:text="@string/nearby"
        android:visibility="gone" />

</merge>